Update frontend configuration for production deployment

--- a/.env.production
+++ b/.env.production
@@ -2,8 +2,18 @@
 # Deployed on Vercel with Render Backend
 
 # ============================================
-# API CONFIGURATION
+# API CONFIGURATION - DUAL BACKEND SETUP
 # ============================================
+
+# Server 1 - User & Property Management (Main Backend)
+NEXT_PUBLIC_SERVER1_URL=https://zero-brokerage-backend-main.onrender.com
+NEXT_PUBLIC_API_SERVER1_URL=https://zero-brokerage-backend-main.onrender.com/api/v1
+
+# Server 2 - Payments, Admin & Media (Secondary Backend)
+NEXT_PUBLIC_SERVER2_URL=https://na-mila.onrender.com
+NEXT_PUBLIC_API_SERVER2_URL=https://na-mila.onrender.com/api/v1
+
+# Legacy URLs (for backward compatibility)
 NEXT_PUBLIC_API_BASE_URL=https://zero-brokerage-backend-main.onrender.com/api/v1
 NEXT_PUBLIC_BACKEND_URL=https://zero-brokerage-backend-main.onrender.com
 NEXT_PUBLIC_ASSETS_BASE_URL=https://zero-brokerage-backend-main.onrender.com
